Realizados los siguientes cambios en dotacion.
Arreglada busqueda en shaincidencias por fechas.

modificadas funciones counters de shaincidencias (ambas)

Arreglado bug de seleccion de dato de seleccion de la cedula en
shaincidencias y de filtro del mismo autocomplete.

Arreglado muestra de informacion de la sucursal en vez del codigo en
modulo de usuarios.

--- a/sha/WebContent/resources/css/styles.css
+++ b/sha/WebContent/resources/css/styles.css
@@ -370,3 +370,10 @@ html, body {
 	.top-alignment {
 	     vertical-align: top;
 	}
+	
+	.calendarClass input {
+	margin-bottom:3px !important;
+   	margin-top:3px !important;
+	width: 200px !important;
+	height: 45px !important;
+}
